--- a/composer.json
+++ b/composer.json
@@ -1,6 +1,7 @@
 {
   "name": "istvanmolitor/laravel-contact",
   "description": "Laravel kapcsolat",
+  "version": "1.0.1",
   "type": "libary",
   "authors": [
     {
